@@ -13,6 +13,7 @@ Date: 00. 00. 0000
     - Fixed a crash when clicking the ingredient combinator button without any ingredients present
     - Fixed a crash caused by a mod adding trains with a capacity of zero
     - Fixed an issue where pasting a larger amount of modules onto a smaller amount of available slots would not calculate the effects correctly
+    - Fixed an issue where copy/pasting a machine would not respect module compatibility
     - Fixed an issue where exporting ingredients to combinator would leave out items with amounts below 1
     - Fixed that lines with subfloor would not be grayed out as desired when checked off in the compact dialog
 
